# Gestion-d-incidents-logistique

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboards/: business_dashboard.py  monitoring_dashboard.py
data/corpus/: contrat_fournisseur_valeo.txt  reseau_hubs.txt  sop_incidents_transport.txt
docs/: Documentation_Technique.docx  agent_card.md  architecture.md  demo_guide.md  github_checklist.md  mongodb_online.md  runbook.md  security.md  skillspector.md  skillspector_report_template.md
obsidian-vault/: Capteurs electroniques.md  Casablanca.md  Continental Tanger.md  Kenitra.md  Modules moteur.md  README.md  Responsable Achats.md  Responsable Qualite.md  Responsable Supply Chain.md  Tanger Med.md  Tour de Controle Logistique.md  Valeo Kenitra.md
reports/: skillspector-execution-status.md  skillspector-secure-agents.md  skillspector-vulnerable-agents.md
schemas/: incident_response.schema.json
scripts/: bootstrap.ps1  check_databases.ps1  install_obsidian_windows.ps1  install_skillspector.ps1  run_skillspector.ps1  run_skillspector_docker.ps1  skillspector_scan.ps1  start_mongodb_docker.ps1
src/logistics_agent/: __init__.py  config.py  graph.py  hitl.py  kg_export_obsidian.py  knowledge_graph.py  llm.py  main.py  monitoring.py  rag.py  secure_agents.py  security.py  state.py  vulnerable_agents.py
tests/: test_schema.py
